--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@ body {
   height: auto;
   overflow-x: hidden;
   overflow-y: auto;
+  color: #333;
 }
 
 html,
@@ -18,4 +19,9 @@ body * {
 body {
   padding: 10px;
   text-align: center;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
 }
