--- a/src/components/PokemonItem/pokemon-item.component.css
+++ b/src/components/PokemonItem/pokemon-item.component.css
@@ -6,6 +6,7 @@
   padding: 20px;
   text-align: center;
   width: 200px;
+  position: relative;
 }
 
 .pokemon-image {
@@ -24,4 +25,18 @@
 
 .pokemon-info {
   font-size: 14px;
+}
+
+.pokemon-favorite {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border-radius: 5px;
+  padding: 5px 7px;
+  cursor: pointer;
+  background: #ffffff;
+}
+
+.pokemon-favorite--favorite {
+  background: #8de98d;
 }
