--- a/src/components/PokemonItem/pokemon-item.component.css
+++ b/src/components/PokemonItem/pokemon-item.component.css
@@ -28,15 +28,16 @@
 }
 
 .pokemon-favorite {
+  transition: background-color 300ms ease-in-out;
   position: absolute;
   top: 10px;
   right: 10px;
   border-radius: 5px;
   padding: 5px 7px;
   cursor: pointer;
-  background: #ffffff;
+  background-color: #ffffff;
 }
 
 .pokemon-favorite--favorite {
-  background: #8de98d;
+  background-color: #8de98d;
 }
